# pictures

./: .gitignore  BUILD.md  CLAUDE.md  README-Chromium.md  README.md  test-chromium-file-access.sh  test-chromium-setup.sh
.github/workflows/: build_and_release.yml  release.yml
backend/: .gitignore  CLAUDE.md  build.sh  config.go  config.yaml.example  go.mod  go.sum  main.go  openapi.yaml  webdav_sync.go
frontend/: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  photoframe.js  vite.config.ts
frontend/.cargo/: config.toml
frontend/src/: App.vue  main.ts  style.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: PhotoFrame.vue
frontend/src/composables/: usePhotoFrame.ts
frontend/src/utils/: cookies.ts
packaging/: Dockerfile.build  create_image.sh  github_actions_build.sh
packaging/debian/: postinst  postrm  prerm
packaging/scripts/: photoframe-launcher.sh  setup-display.sh  start-chromium-photoframe.sh  start-frontend-server.py
packaging/systemd/: photoframe-frontend.service  photoframe.service
packaging/wrapper/: digital-photo-frame
qt-frontend/: CMakeLists.txt
qt-frontend/resources/: main.qml
qt-frontend/src/: BackendClient.cpp  BackendClient.h  ImageModel.cpp  ImageModel.h  main.cpp
